# kolchan

./: .gitignore  ChangeLog  Makefile.am  README.md  robodoc.css  robodoc.rc
debian/: changelog  control  copyright  watch
doc/: Makefile.am  kolchan.css  kolchan.html  kolchan.html.patch  svn2git.html.patch
src/: Makefile.am  automake.sh  build-deb.sh  git-add-id  git-add-with-keywords  gitadd.sh  kolchan-automake  kolchan-builddeb  kolchan-robodoc  kolchan-up2deb  libsys.sh  pre-commit  subgit.sh  svnlog2revs.sh  svnsetlog.sh  uupdeb
