##
## $Git: Makefile.am 1.0-3-142 2023-05-09 13:03:11+00:00 yds $
##
#
AUTOMAKE_OPTIONS	= -Wno-portability
#
PACKAGE        = kolchan
bin_SCRIPTS    = git-add-id kolchan-automake kolchan-robodoc kolchan-builddeb kolchan-up2deb
datadir        = /usr/share/kolchan
data_DATA      = libsys.sh ../VERSION pre-commit
DESTDIR        =
